--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-scroll": "^1.7.16",
     "react-socks": "^2.1.0",
     "redux": "^4.0.5",
-    "source-map-explorer": "^2.4.2"
+    "remark": "^12.0.0",
+    "source-map-explorer": "^2.4.2",
+    "strip-markdown": "^3.1.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
