--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.1.0",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
+    "marked": "^1.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
