--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "redux": "^4.0.5",
     "remark": "^12.0.0",
     "source-map-explorer": "^2.4.2",
-    "strip-markdown": "^3.1.2"
+    "strip-markdown": "^3.1.2",
+    "webpack-bundle-analyzer": "^3.7.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
+    "start": "node app.js",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
