--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "node app.js",
+    "start": "react-scripts build && node app.js",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
