--- a/.gcloudignore
+++ b/.gcloudignore
@@ -6,12 +6,19 @@
 # For more information, run:
 #   $ gcloud topic gcloudignore
 #
+
 .gcloudignore
+
 # If you would like to upload your .git directory, .gitignore file or files
 # from your .gitignore file, remove the corresponding line
 # below:
 .git
 .gitignore
+README.md
 
 # Node.js dependencies:
 node_modules/
+
+# Source Directories
+src/
+public/
